logs/Slang/chapter-8/8.17--constructor_const_arg.sv.log
name: constructor_const_arg
description: class inheritance with a constant constructor argument
should_fail: 0
tags: 8.17
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.17--constructor_const_arg.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.17--constructor_const_arg.sv:8:2: error: language feature not yet supported
	class super_cls;
	^~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.17--constructor_const_arg.sv:10:11: error: expected identifier
		function new(int def = 3);
		        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.17--constructor_const_arg.sv:10:12: error: expected statement
		function new(int def = 3);
		         ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.17--constructor_const_arg.sv:10:27: error: expected declarator
		function new(int def = 3);
		                        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.17--constructor_const_arg.sv:14:2: error: language feature not yet supported
	class test_cls extends super_cls(5);
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.17--constructor_const_arg.sv:16:11: error: expected identifier
		function new(int def = 42);
		        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.17--constructor_const_arg.sv:16:12: error: expected statement
		function new(int def = 42);
		         ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.17--constructor_const_arg.sv:16:28: error: expected declarator
		function new(int def = 42);
		                         ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.17--constructor_const_arg.sv:21:2: error: use of undeclared identifier 'test_cls'
	test_cls test_obj;
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.17--constructor_const_arg.sv:24:14: error: language feature not yet supported
		test_obj = new(37);
		           ^~~~~~~
